@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="ktorrent" version="19">
+<kpartgui name="ktorrent" version="20">
 <MenuBar>
   <Menu name="file"><text>&amp;File</text>
 	  <Action name="file_new"/>
@@ -53,23 +53,22 @@
 	<Action name="remove" />
 	<Action name="view_remove_torrent_and_data" />
 	<Separator/>
-	<Action name="view_add_peers" />
-	<Menu name="PeerSourcesMenu"><text>Additional Peer Sources</text>
-		<Action name="view_dht_enabled" />
-		<Action name="view_pex_enabled" />
-	</Menu>
+	<Action name="view_torrent_properties" />
+	<Action name="speed_limits" />
 	<Separator/>
+	<Action name="view_add_peers" />
+	<Action name="view_announce" />
 	<Action name="view_rename_torrent" />
 	<Action name="view_export_torrent" />
-	<Action name="view_announce" />
-	<Action name="view_preview" />
+	<Action name="view_copy_url" />
 	<Separator/>
+	<Action name="view_move_data" />
+	<Action name="check_data" />
+	<Action name="view_preview" />
 	<Menu name="OpenDirMenu" icon="folder-open"><text>Open Directory</text>
 		<Action name="view_open_data_dir" />
 		<Action name="view_open_tmp_dir" />
 	</Menu>
-	<Action name="view_move_data" />
-	<Action name="view_move_data_when_completed" />
 	<Separator/>
 	<Action name="view_remove_from_group" />
 	<Menu name="GroupsSubMenu" icon="application-x-bittorrent"><text>Add to Group</text>
@@ -77,10 +76,6 @@
 		<Separator/>
 		<Action name="view_add_to_new_group" />
 	</Menu>
-	<Separator/>
-	<Action name="check_data" />
-	<Action name="speed_limits" />
-	<Action name="view_copy_url" />
 	<Separator/>
 	<Menu name="ColumnsMenu">
 		<text>Configure Columns</text>
